# sleekboard

./: AUTHORS  ChangeLog  Makefile  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.in
src/: Makefile  Makefile.am  Makefile.in  button.c  button.h  fakekey.c  fakekey.h  main.c  main.h  render.c  render.h
src/.deps/: button.Po  fakekey.Po  main.Po  render.Po
